@@ -68,10 +68,10 @@ pkcs1_rsa_sha1_encode(mpz_t m, unsigned key_size, struct sha1_ctx *hash)
   TMP_DECL(em, uint8_t, NETTLE_MAX_BIGNUM_SIZE);
   TMP_ALLOC(em, key_size);
 
-  p = pkcs1_signature_prefix(key_size, em,
-			     sizeof(sha1_prefix),
-			     sha1_prefix,
-			     SHA1_DIGEST_SIZE);
+  p = _pkcs1_signature_prefix(key_size, em,
+			      sizeof(sha1_prefix),
+			      sha1_prefix,
+			      SHA1_DIGEST_SIZE);
   if (p)
     {
       sha1_digest(hash, SHA1_DIGEST_SIZE, p);
@@ -89,10 +89,10 @@ pkcs1_rsa_sha1_encode_digest(mpz_t m, unsigned key_size, const uint8_t *digest)
   TMP_DECL(em, uint8_t, NETTLE_MAX_BIGNUM_SIZE);
   TMP_ALLOC(em, key_size);
 
-  p = pkcs1_signature_prefix(key_size, em,
-			     sizeof(sha1_prefix),
-			     sha1_prefix,
-			     SHA1_DIGEST_SIZE);
+  p = _pkcs1_signature_prefix(key_size, em,
+			      sizeof(sha1_prefix),
+			      sha1_prefix,
+			      SHA1_DIGEST_SIZE);
   if (p)
     {
       memcpy(p, digest, SHA1_DIGEST_SIZE);
